Création de la page delusion

--- a/accueil.html
+++ b/accueil.html
@@ -1,99 +1,112 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio William Beauvais</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Le header qui est sur toutes les pages -->
     <div class="header">
-        <h1 class="nom">
-            William Beauvais
-        </h1>
-        <!-- La naviguation qui est dans le header et le footer -->
-        <div class="nav-header">
-            <a href="projets.html" class="nav-option">Projets</a>
-            <a href="apropos.html" class="nav-option">À propos</a>
-            <a href="accueil.html" class="nav-accueil nav-accueil-actif"></a>
-        </div>
+      <h1 class="nom">William Beauvais</h1>
+      <!-- La naviguation qui est dans le header et le footer -->
+      <div class="nav-header">
+        <a href="projets.html" class="nav-option">Projets</a>
+        <a href="apropos.html" class="nav-option">À propos</a>
+        <a href="accueil.html" class="nav-accueil nav-accueil-actif"></a>
+      </div>
     </div>
 
     <!-- L'intro montre mes motivations et accueille les gens dans mon portfolio -->
+    <img src="" alt="texte portfolio" class="portfolio-titre" />
     <div class="intro">
-        <div class="autoportrait"></div>
-        <div class="portfolio">
-            <div class="portfolio-titre"></div>
-            <p class="motivation">Passionné par l'art visuel et la communication créative, je souhaite débuter ma
-                carrière en tant que designer graphique au sein d'une agence dynamique.
-                Mon objectif est de contribuer à des projets innovants tout en développant mes compétences techniques et
-                artistiques.</p>
-            <div class="fleurs">
-                <div class="fleur-gauche"></div>
-                <div class="fleur-droite"></div>
-            </div>
+      <img src="" alt="auto-portrait" class="autoportrait" />
+      <div class="droite">
+        <p class="motivation">
+          Passionné par l'art visuel et la communication créative, je souhaite
+          débuter ma carrière en tant que designer graphique au sein d'une
+          agence dynamique. Mon objectif est de contribuer à des projets
+          innovants tout en développant mes compétences techniques et
+          artistiques.
+        </p>
+        <div class="fleurs">
+          <div class="fleur-gauche"></div>
+          <div class="fleur-droite"></div>
         </div>
+      </div>
     </div>
 
     <!-- La citation donne à mon portfolio un côté artistique -->
     <div class="citation">
-        <p class="citation-texte">L'art montre à la vie ce qu'elle ignore</p>
+      <p class="citation-texte">L'art montre à la vie ce qu'elle ignore</p>
     </div>
 
     <!-- Cette bannière animé montre les logiciels que je maitrise -->
     <div class="logiciels">
-        <img src=""
-            alt="Logiciels que je maitrise : Visual Studio Code, Light Room Classic, Davinci Resolve, Illustrator, Photoshop, After Effects, Maya et InDesign"
-            class="logiciels-anim">
+      <img
+        src=""
+        alt="Logiciels que je maitrise : Visual Studio Code, Light Room Classic, Davinci Resolve, Illustrator, Photoshop, After Effects, Maya et InDesign"
+        class="logiciels-anim"
+      />
     </div>
 
     <!-- Cet appercu de qulques projets montre 3 projets qui représentent bien mon travail et ça attire le visiteur à aller en voir plus -->
     <div class="projets-apercu">
-        <h2 class="quelques">Quelques Projets</h2>
-        <div class="caroussel">
-            <a href="delusion.html" class="delusion-apercu"></a>
-            <a href="femme.html" class="femme-apercu"></a>
-            <a href="lion.html" class="lion-apercu"></a>
-        </div>
-        <button class="btn-projets">
-            Voir tous les projets
-        </button>
+      <h2 class="quelques">Quelques Projets</h2>
+      <div class="caroussel">
+        <a href="delusion.html" class="delusion-apercu"></a>
+        <a href="femme.html" class="femme-apercu"></a>
+        <a href="lion.html" class="lion-apercu"></a>
+      </div>
+      <button class="btn-projets">Voir tous les projets</button>
     </div>
 
     <!-- Cette section à propos permet au gens qui veulent me connaitre de le faire avec un texte et des photos de ma vie -->
     <div class="apropos-apercu">
-        <div class="presentation-apercu">
-            <img src="" alt="Photo de moi-même jouant de la guitare" class="moi-apercu">
-            <p class="texte-presentation-apercu">Bonjour, moi c'est Will et je suis un jeune homme très créatif qui se
-                lance toujours dans des projets qui me passionnent et me rendent meilleur. J'aime aussi beaucoup le
-                sport comme l'escalade ou la course à pied. Une de mes passions est le voyage, je trouve que c'est
-                l'expérience qui fait le plus évoluer un être humain, surtout au niveau de l'ouverture d'esprit et de la
-                compréhension du monde dans lequel nous vivons. Je vois chaque jours comme une chance et chaque moments
-                comme une opportunité d'apprendre à être meilleur.</p>
-        </div>
-        <button class="btn-apropos">
-            À propos
-        </button>
-        <img src="" alt="Gallerie de photo de ma vie qui défile" class="gallerie-photos-apercu">
+      <div class="presentation-apercu">
+        <img
+          src=""
+          alt="Photo de moi-même jouant de la guitare"
+          class="moi-apercu"
+        />
+        <p class="texte-presentation-apercu">
+          Bonjour, moi c'est Will et je suis un jeune homme très créatif qui se
+          lance toujours dans des projets qui me passionnent et me rendent
+          meilleur. J'aime aussi beaucoup le sport comme l'escalade ou la course
+          à pied. Une de mes passions est le voyage, je trouve que c'est
+          l'expérience qui fait le plus évoluer un être humain, surtout au
+          niveau de l'ouverture d'esprit et de la compréhension du monde dans
+          lequel nous vivons. Je vois chaque jours comme une chance et chaque
+          moments comme une opportunité d'apprendre à être meilleur.
+        </p>
+      </div>
+      <button class="btn-apropos">À propos</button>
+      <img
+        src=""
+        alt="Gallerie de photo de ma vie qui défile"
+        class="gallerie-photos-apercu"
+      />
     </div>
 
     <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
     <div class="footer">
-        <h1 class="merci">Merci</h1>
-        <p class="contact">N'hésitez pas à me contacter pour des projets ou n'importe qu'elles autres raisons.</p>
-        <p class="infos">William Beauvais - wbeauvais19@gmail.com - 514-889-4575</p>
-        <div class="nav-footer">
-            <a href="projets.html" class="nav-option">Projets</a>
-            <a href="apropos.html" class="nav-option">À propos</a>
-            <a href="accueil.html" class="nav-accueil nav-accueil-actif"></a>
-        </div>
+      <h1 class="merci">Merci</h1>
+      <p class="contact">
+        N'hésitez pas à me contacter pour des projets ou n'importe qu'elles
+        autres raisons.
+      </p>
+      <p class="infos">
+        William Beauvais - wbeauvais19@gmail.com - 514-889-4575
+      </p>
+      <div class="nav-footer">
+        <a href="projets.html" class="nav-option">Projets</a>
+        <a href="apropos.html" class="nav-option">À propos</a>
+        <a href="accueil.html" class="nav-accueil nav-accueil-actif"></a>
+      </div>
     </div>
 
-
     <script src="scripts.js"></script>
-</body>
-
+  </body>
 </html>
