--- a/projets.html
+++ b/projets.html
@@ -25,11 +25,13 @@
     <h1 class="titre">Mes projets</h1>
 
     <!-- Composante vue pour filtrer les différents types de projets -->
-    <button class="filtres">Tous les projets</button>
-    <button class="filtres">Design graphique</button>
-    <button class="filtres">3D</button>
-    <button class="filtres">Vidéo</button>
-    <button class="filtres">Dessin</button>
+    <div class="filtres">
+        <button class="filtres">Tous les projets</button>
+        <button class="filtres">Design graphique</button>
+        <button class="filtres">3D</button>
+        <button class="filtres">Vidéo</button>
+        <button class="filtres">Dessin</button>
+    </div>
 
     <!-- Toutes les cartes des projets -->
     <a href="femme.html" class="projet-carte carte-femme">
