--- a/accueil.html
+++ b/accueil.html
@@ -6,17 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio William Beauvais</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/knq4tjk.css">
 </head>
 
 <body>
   <!-- Le header qui est sur toutes les pages -->
   <div class="header">
-    <h1 class="nom">William<br>Beauvais</h1>
+    <a class="nom" href="accueil.html">William Beauvais</a>
     <!-- La naviguation qui est dans le header et le footer -->
     <div class="nav-header">
       <a href="projets.html" class="nav-option-header">Projets</a>
       <a href="apropos.html" class="nav-option-header">À propos</a>
-      <a href="accueil.html" class="nav-accueil nav-accueil-actif">
+      <a href="accueil.html" class="nav-accueil">
         <img src="img/maison-header.png" alt="accueil" class="maison-header">
       </a>
     </div>
@@ -35,8 +36,8 @@
         artistiques.
       </p>
       <div class="fleurs">
-        <img src="img/fleur-gauche.png" alt="" class="fleur-gauche">
-        <img src="img/fleur-droite.png" alt="" class="fleur-droite">
+        <img src="img/fleur-gauche.png" alt="fleur" class="fleur-gauche">
+        <img src="img/fleur-droite.png" alt="fleur" class="fleur-droite">
       </div>
     </div>
   </div>
@@ -58,9 +59,9 @@
   <div class="projets-apercu">
     <h2 class="quelques">Quelques Projets</h2>
     <div class="caroussel">
-      <a href="delusion.html" class="delusion-apercu"><img src="img/delusion.jpg" alt=""class="img-apercu"></a>
-      <a href="femme.html" class="femme-apercu"><img src="img/la_femme.jpg" alt=""class="img-apercu"></a>
-      <a href="lion.html" class="lion-apercu"><img src="img/scene_final.jpg" alt=""class="img-apercu lion"></a>
+      <a href="delusion.html" class="delusion-apercu"><img src="img/delusion.jpg" alt="" class="img-apercu"></a>
+      <a href="femme.html" class="femme-apercu"><img src="img/la_femme.jpg" alt="" class="img-apercu"></a>
+      <a href="lion.html" class="lion-apercu"><img src="img/scene_final.jpg" alt="" class="img-apercu lion"></a>
     </div>
     <button class="btn-projets">Voir tous les projets <img src="img/fleche-verte.png" alt="" class="fleche"> </button>
   </div>
