--- a/apropos.html
+++ b/apropos.html
@@ -2,31 +2,32 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio William Beauvais</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio William Beauvais</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/knq4tjk.css">
 </head>
 
 <body>
-    <!-- Le header qui est sur toutes les pages -->
-    <div class="header">
-        <h1 class="nom">
-            William Beauvais
-        </h1>
-        <!-- La naviguation qui est dans le header et le footer -->
-        <div class="nav-header">
-            <a href="projets.html" class="nav-option nav-option-actif">Projets</a>
-            <a href="apropos.html" class="nav-option">À propos</a>
-            <a href="accueil.html" class="nav-accueil"></a>
-        </div>
+  <!-- Le header qui est sur toutes les pages -->
+  <div class="header">
+    <a class="nom" href="accueil.html">William Beauvais</a>
+    <!-- La naviguation qui est dans le header et le footer -->
+    <div class="nav-header">
+      <a href="projets.html" class="nav-option-header">Projets</a>
+      <a href="apropos.html" class="nav-option-header">À propos</a>
+      <a href="accueil.html" class="nav-accueil">
+        <img src="img/maison-header.png" alt="accueil" class="maison-header">
+      </a>
     </div>
-
+  </div>
+<div class="apropos">
     <h1 class="titre">À propos</h1>
 
     <!-- Même chose que dans l'accueil mais la galerie photo n'est pas animé -->
     <div class="presentation-apercu">
-        <img src="" alt="Photo de moi-même jouant de la guitare" class="moi">
+        <img src="img/guitare.png" alt="Photo de moi-même jouant de la guitare" class="moi">
         <p class="texte-presentation">Bonjour, moi c'est Will et je suis un jeune homme très créatif qui se
             lance toujours dans des projets qui me passionnent et me rendent meilleur. J'aime aussi beaucoup le
             sport comme l'escalade ou la course à pied. Une de mes passions est le voyage, je trouve que c'est
@@ -34,8 +35,8 @@
             compréhension du monde dans lequel nous vivons. Je vois chaque jours comme une chance et chaque moments
             comme une opportunité d'apprendre à être meilleur.</p>
     </div>
-    <img src="" alt="Gallerie de photo de ma vie" class="gallerie-photos">
-
+    <img src="img/photos-gallerie.png" alt="Gallerie de photo de ma vie" class="gallerie-photos">
+</div>
     <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
     <div class="footer">
         <h1 class="merci">Merci</h1>
