--- a/delusion.html
+++ b/delusion.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio William Beauvais</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <!-- Le header qui est sur toutes les pages -->
-    <div class="header">
-      <h1 class="nom">William Beauvais</h1>
-      <!-- La naviguation qui est dans le header et le footer -->
-      <div class="nav-header">
-        <a href="projets.html" class="nav-option nav-option-actif">Projets</a>
-        <a href="apropos.html" class="nav-option">À propos</a>
-        <a href="accueil.html" class="nav-accueil"></a>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio William Beauvais</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/knq4tjk.css">
+</head>
+
+<body>
+  <!-- Le header qui est sur toutes les pages -->
+  <div class="header">
+    <a class="nom" href="accueil.html">William Beauvais</a>
+    <!-- La naviguation qui est dans le header et le footer -->
+    <div class="nav-header">
+      <a href="projets.html" class="nav-option-header">Projets</a>
+      <a href="apropos.html" class="nav-option-header">À propos</a>
+      <a href="accueil.html" class="nav-accueil">
+        <img src="img/maison-header.png" alt="accueil" class="maison-header">
+      </a>
     </div>
+  </div>
 
     <h1 class="titre">Delusion</h1>
 
