--- a/projets.html
+++ b/projets.html
@@ -2,25 +2,26 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio William Beauvais</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio William Beauvais</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/knq4tjk.css">
 </head>
 
 <body>
-    <!-- Le header qui est sur toutes les pages -->
-    <div class="header">
-        <h1 class="nom">
-            William Beauvais
-        </h1>
-        <!-- La naviguation qui est dans le header et le footer -->
-        <div class="nav-header">
-            <a href="projets.html" class="nav-option nav-option-actif">Projets</a>
-            <a href="apropos.html" class="nav-option">À propos</a>
-            <a href="accueil.html" class="nav-accueil"></a>
-        </div>
+  <!-- Le header qui est sur toutes les pages -->
+  <div class="header">
+    <a class="nom" href="accueil.html">William Beauvais</a>
+    <!-- La naviguation qui est dans le header et le footer -->
+    <div class="nav-header">
+      <a href="projets.html" class="nav-option-header">Projets</a>
+      <a href="apropos.html" class="nav-option-header">À propos</a>
+      <a href="accueil.html" class="nav-accueil">
+        <img src="img/maison-header.png" alt="accueil" class="maison-header">
+      </a>
     </div>
+  </div>
 
     <h1 class="titre">Mes projets</h1>
 
@@ -34,42 +35,21 @@
     </div>
 
     <!-- Toutes les cartes des projets -->
+     <div class="toutlesprojets">
+        <a href="femme.html" class="projet-carte carte-femme">
+        <img src="" alt="Projet La femme" class="img-carte">
+        <p class="titre-carte">La femme</p>
+    </a>
     <a href="femme.html" class="projet-carte carte-femme">
         <img src="" alt="Projet La femme" class="img-carte">
         <p class="titre-carte">La femme</p>
     </a>
-    <a href="lion.html" class="projet-carte carte-lion">
-        <img src="" alt="Projet L'homme et le lion" class="img-carte">
-        <p class="titre-carte">L'homme et le lion</p>
+    <a href="femme.html" class="projet-carte carte-femme">
+        <img src="" alt="Projet La femme" class="img-carte">
+        <p class="titre-carte">La femme</p>
     </a>
-    <a href="delusion.html" class="projet-carte carte-delusion">
-        <img src="" alt="Projet Delusion" class="img-carte">
-        <p class="titre-carte">Delusion</p>
-    </a>
-    <a href="1000.html" class="projet-carte carte-1000">
-        <img src="" alt="Projet 1000°" class="img-carte">
-        <p class="titre-carte">1000°</p>
-    </a>
-    <a href="derive.html" class="projet-carte carte-derive">
-        <img src="" alt="Projet À la dérive" class="img-carte">
-        <p class="titre-carte">À la dérive</p>
-    </a>
-    <a href="save.html" class="projet-carte carte-save">
-        <img src="" alt="Projet Save them" class="img-carte">
-        <p class="titre-carte">Save them</p>
-    </a>
-    <a href="future.html" class="projet-carte carte-future">
-        <img src="" alt="Projet My future is blurry" class="img-carte">
-        <p class="titre-carte">My future is blurry</p>
-    </a>
-    <a href="nature.html" class="projet-carte carte-nature">
-        <img src="" alt="Projet Nature morte" class="img-carte">
-        <p class="titre-carte">Nature morte</p>
-    </a>
-    <a href="kaneki.html" class="projet-carte carte-kaneki">
-        <img src="" alt="Projet Kaneki" class="img-carte">
-        <p class="titre-carte">Kaneki</p>
-    </a>
+     </div>
+    
 
     <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
     <div class="footer">
