--- a/nature.html
+++ b/nature.html
@@ -25,32 +25,33 @@
         </a>
       </div>
     </div>
-    <div class="apropos">
-      <h1 class="titre">À propos</h1>
+    <div class="unprojet">
+      <h1 class="titre">Nature Morte</h1>
 
-      <!-- Même chose que dans l'accueil mais la galerie photo n'est pas animé -->
-      <div class="presentation-apercu">
+      <div class="desc-img">
         <img
-          src="img/guitare.png"
-          alt="Photo de moi-même jouant de la guitare"
-          class="moi"
+          src="img/delusion.jpg"
+          alt="Projet Nature Morte"
+          class="img-projet"
         />
-        <p class="texte-presentation">
-          Bonjour, moi c'est Will et je suis un jeune homme très créatif qui se
-          lance toujours dans des projets qui me passionnent et me rendent
-          meilleur. J'aime aussi beaucoup le sport comme l'escalade ou la course
-          à pied. Une de mes passions est le voyage, je trouve que c'est
-          l'expérience qui fait le plus évoluer un être humain, surtout au
-          niveau de l'ouverture d'esprit et de la compréhension du monde dans
-          lequel nous vivons. Je vois chaque jours comme une chance et chaque
-          moments comme une opportunité d'apprendre à être meilleur.
+        <p class="desc-projet">
+          Nature Morte est un projet qui met en valeur la nature à son apogée,
+          avant que l'humanité ne la gâche et ne détruise la beauté du monde. Ce
+          projet vise à sensibiliser sur l'impact que nous avons sur notre
+          environnement.
         </p>
       </div>
-      <img
-        src="img/photos-gallerie.png"
-        alt="Gallerie de photo de ma vie"
-        class="gallerie-photos"
-      />
+      <div class="logiciel-role">
+        <div class="logis">
+          <img src="img/maya.png" alt="Maya" class="logi" />
+          <img src="img/davinci.png" alt="Davinci Resolve" class="logi" />
+        </div>
+        <p class="role">
+          Rôles dans le projet : Modélisation 3D, Animation 3D, Création sonore
+          et Montage Vidéo
+        </p>
+      </div>
+      <p class="collab">En collaboration avec Alexis Bolduc</p>
     </div>
     <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
     <div class="footer">
@@ -63,9 +64,11 @@
         William Beauvais - wbeauvais19@gmail.com - 514-889-4575
       </p>
       <div class="nav-footer">
-        <a href="projets.html" class="nav-option nav-option-actif">Projets</a>
-        <a href="apropos.html" class="nav-option">À propos</a>
-        <a href="accueil.html" class="nav-accueil"></a>
+        <a href="projets.html" class="nav-option-footer">Projets</a>
+        <a href="apropos.html" class="nav-option-footer">À propos</a>
+        <a href="accueil.html" class="nav-accueil nav-accueil-actif"
+          ><img src="img/maison-footer.png" alt="accueil" class="maison-footer"
+        /></a>
       </div>
     </div>
 
