--- a/1000.html
+++ b/1000.html
@@ -25,32 +25,29 @@
         </a>
       </div>
     </div>
-    <div class="apropos">
-      <h1 class="titre">À propos</h1>
+    <div class="unprojet">
+      <h1 class="titre">1000°</h1>
 
-      <!-- Même chose que dans l'accueil mais la galerie photo n'est pas animé -->
-      <div class="presentation-apercu">
-        <img
-          src="img/guitare.png"
-          alt="Photo de moi-même jouant de la guitare"
-          class="moi"
-        />
-        <p class="texte-presentation">
-          Bonjour, moi c'est Will et je suis un jeune homme très créatif qui se
-          lance toujours dans des projets qui me passionnent et me rendent
-          meilleur. J'aime aussi beaucoup le sport comme l'escalade ou la course
-          à pied. Une de mes passions est le voyage, je trouve que c'est
-          l'expérience qui fait le plus évoluer un être humain, surtout au
-          niveau de l'ouverture d'esprit et de la compréhension du monde dans
-          lequel nous vivons. Je vois chaque jours comme une chance et chaque
-          moments comme une opportunité d'apprendre à être meilleur.
+      <div class="desc-img">
+        <img src="img/10002.png" alt="Projet 1000°" class="img-projet" />
+        <p class="desc-projet">
+          1000° est un projet vidéo qui met en lumière un personnage qui brûle
+          de l'intérieur. La cigarette en est une allusion. Les émotions du
+          personnage sont exprimées de manière évidente, notamment à travers la
+          sortie d'urgence et l'image de la cigarette qui s'écrase. Cependant,
+          la vidéo adopte un style abstrait et véhicule des messages cachés sur
+          sa vie pleine de rage intérieur.
         </p>
       </div>
-      <img
-        src="img/photos-gallerie.png"
-        alt="Gallerie de photo de ma vie"
-        class="gallerie-photos"
-      />
+      <div class="logiciel-role">
+        <div class="logis">
+          <img src="img/davinci.png" alt="Davinci Resolve" class="logi" />
+        </div>
+        <p class="role">Rôles dans le projet : Caméraman, Éclairage, Montage</p>
+      </div>
+      <p class="collab">
+        En collaboration avec Alexis Bolduc et Alexis Tremblay
+      </p>
     </div>
     <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
     <div class="footer">
@@ -63,9 +60,11 @@
         William Beauvais - wbeauvais19@gmail.com - 514-889-4575
       </p>
       <div class="nav-footer">
-        <a href="projets.html" class="nav-option nav-option-actif">Projets</a>
-        <a href="apropos.html" class="nav-option">À propos</a>
-        <a href="accueil.html" class="nav-accueil"></a>
+        <a href="projets.html" class="nav-option-footer">Projets</a>
+        <a href="apropos.html" class="nav-option-footer">À propos</a>
+        <a href="accueil.html" class="nav-accueil nav-accueil-actif"
+          ><img src="img/maison-footer.png" alt="accueil" class="maison-footer"
+        /></a>
       </div>
     </div>
 
