--- a/accueil.html
+++ b/accueil.html
@@ -1,109 +1,132 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio William Beauvais</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/knq4tjk.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio William Beauvais</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://use.typekit.net/knq4tjk.css">
-</head>
-
-<body>
-  <!-- Le header qui est sur toutes les pages -->
-  <div class="header">
-    <a class="nom" href="accueil.html">William Beauvais</a>
-    <!-- La naviguation qui est dans le header et le footer -->
-    <div class="nav-header">
-      <a href="projets.html" class="nav-option-header">Projets</a>
-      <a href="apropos.html" class="nav-option-header">À propos</a>
-      <a href="accueil.html" class="nav-accueil">
-        <img src="img/maison-header.png" alt="accueil" class="maison-header">
-      </a>
-    </div>
-  </div>
-
-  <!-- L'intro montre mes motivations et accueille les gens dans mon portfolio -->
-  <div class="intro">
-    <img src="img/dessinportfolio.png" alt="auto-portrait" class="autoportrait" />
-    <div class="droite">
-      <img src="img/portfolio.png" alt="texte portfolio" class="portfolio-titre" />
-      <p class="motivation">
-        Passionné par l'art visuel et la communication créative, je souhaite
-        débuter ma carrière en tant que designer graphique au sein d'une
-        agence dynamique. Mon objectif est de contribuer à des projets
-        innovants tout en développant mes compétences techniques et
-        artistiques.
-      </p>
-      <div class="fleurs">
-        <img src="img/fleur-gauche.png" alt="fleur" class="fleur-gauche">
-        <img src="img/fleur-droite.png" alt="fleur" class="fleur-droite">
+  <body>
+    <!-- Le header qui est sur toutes les pages -->
+    <div class="header">
+      <a class="nom" href="accueil.html">William Beauvais</a>
+      <!-- La naviguation qui est dans le header et le footer -->
+      <div class="nav-header">
+        <a href="projets.html" class="nav-option-header">Projets</a>
+        <a href="apropos.html" class="nav-option-header">À propos</a>
+        <a href="accueil.html" class="nav-accueil">
+          <img
+            src="img/maison-header.png"
+            alt="accueil"
+            class="maison-header"
+          />
+        </a>
       </div>
     </div>
-  </div>
 
-
-  <!-- La citation donne à mon portfolio un côté artistique -->
-  <div class="citation">
-    <p class="citation-texte">L'art montre à la vie ce qu'elle ignore</p>
-  </div>
-
-  <!-- Cette bannière animé montre les logiciels que je maitrise -->
-  <div class="logiciels">
-    <img src="img/logiciels.png"
-      alt="Logiciels que je maitrise : Visual Studio Code, Light Room Classic, Davinci Resolve, Illustrator, Photoshop, After Effects, Maya et InDesign"
-      class="logiciels-anim" />
-  </div>
-
-  <!-- Cet appercu de qulques projets montre 3 projets qui représentent bien mon travail et ça attire le visiteur à aller en voir plus -->
-  <div class="projets-apercu">
-    <h2 class="quelques">Quelques Projets</h2>
-    <div class="caroussel">
-      <a href="delusion.html" class="delusion-apercu"><img src="img/delusion.jpg" alt="" class="img-apercu"></a>
-      <a href="femme.html" class="femme-apercu"><img src="img/la_femme.jpg" alt="" class="img-apercu"></a>
-      <a href="lion.html" class="lion-apercu"><img src="img/scene_final.jpg" alt="" class="img-apercu lion"></a>
+    <!-- L'intro montre mes motivations et accueille les gens dans mon portfolio -->
+    <div class="intro">
+      <img
+        src="img/dessinportfolio.png"
+        alt="auto-portrait"
+        class="autoportrait"
+      />
+      <div class="droite">
+        <img
+          src="img/portfolio.png"
+          alt="texte portfolio"
+          class="portfolio-titre"
+        />
+        <p class="motivation">
+          Passionné par l'art visuel et la communication créative, je souhaite
+          débuter ma carrière en tant que designer graphique au sein d'une
+          agence dynamique. Mon objectif est de contribuer à des projets
+          innovants tout en développant mes compétences techniques et
+          artistiques.
+        </p>
+        <div class="fleurs">
+          <img src="img/fleur-gauche.png" alt="fleur" class="fleur-gauche" />
+          <img src="img/fleur-droite.png" alt="fleur" class="fleur-droite" />
+        </div>
+      </div>
     </div>
-    <button class="btn-projets">Voir tous les projets <img src="img/fleche-verte.png" alt="" class="fleche"> </button>
-  </div>
 
-  <!-- Cette section à propos permet au gens qui veulent me connaitre de le faire avec un texte et des photos de ma vie -->
-  <div class="apropos-apercu">
-    <div class="presentation-apercu">
-      <img src="img/guitare.png" alt="Photo de moi-même jouant de la guitare" class="moi-apercu" />
-      <p class="texte-presentation-apercu">
-        Bonjour, moi c'est Will et je suis un jeune homme très créatif qui se
-        lance toujours dans des projets qui me passionnent et me rendent
-        meilleur. J'aime aussi beaucoup le sport comme l'escalade ou la course
-        à pied. Une de mes passions est le voyage, je trouve que c'est
-        l'expérience qui fait le plus évoluer un être humain, surtout au
-        niveau de l'ouverture d'esprit et de la compréhension du monde dans
-        lequel nous vivons. Je vois chaque jours comme une chance et chaque
-        moments comme une opportunité d'apprendre à être meilleur.
+    <!-- La citation donne à mon portfolio un côté artistique -->
+    <div class="citation">
+      <p class="citation-texte">L'art montre à la vie ce qu'elle ignore</p>
+    </div>
+
+    <!-- Cette bannière animé montre les logiciels que je maitrise -->
+    <div class="logiciels">
+      <div class="logiciels-anim"></div>
+    </div>
+
+    <!-- Cet appercu de qulques projets montre 3 projets qui représentent bien mon travail et ça attire le visiteur à aller en voir plus -->
+    <div class="projets-apercu">
+      <h2 class="quelques">Quelques Projets</h2>
+      <div class="caroussel">
+        <a href="delusion.html" class="delusion-apercu"
+          ><div class="img-apercu delusion"></div
+        ></a>
+        <a href="femme.html" class="femme-apercu"
+          ><div class="img-apercu femme"></div
+        ></a>
+        <a href="lion.html" class="lion-apercu"
+          ><div class="img-apercu lion"></div
+        ></a>
+      </div>
+      <button class="btn-projets">
+        Voir tous les projets
+        <img src="img/fleche-verte.png" alt="" class="fleche" />
+      </button>
+    </div>
+
+    <!-- Cette section à propos permet au gens qui veulent me connaitre de le faire avec un texte et des photos de ma vie -->
+    <div class="apropos-apercu">
+      <div class="presentation-apercu">
+        <img
+          src="img/guitare.png"
+          alt="Photo de moi-même jouant de la guitare"
+          class="moi-apercu"
+        />
+        <p class="texte-presentation-apercu">
+          Bonjour, moi c'est Will et je suis un jeune homme très créatif qui se
+          lance toujours dans des projets qui me passionnent et me rendent
+          meilleur. J'aime aussi beaucoup le sport comme l'escalade ou la course
+          à pied. Une de mes passions est le voyage, je trouve que c'est
+          l'expérience qui fait le plus évoluer un être humain, surtout au
+          niveau de l'ouverture d'esprit et de la compréhension du monde dans
+          lequel nous vivons. Je vois chaque jours comme une chance et chaque
+          moments comme une opportunité d'apprendre à être meilleur.
+        </p>
+      </div>
+      <button class="btn-apropos">
+        À propos <img src="img/fleche-brune.png" alt="" class="fleche" />
+      </button>
+      <div class="gallerie-photos-apercu"></div>
+    </div>
+
+    <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
+    <div class="footer">
+      <h1 class="merci">Merci</h1>
+      <p class="contact">
+        N'hésitez pas à me contacter pour des projets ou n'importe qu'elles
+        autres raisons.
       </p>
+      <p class="infos">
+        William Beauvais - wbeauvais19@gmail.com - 514-889-4575
+      </p>
+      <div class="nav-footer">
+        <a href="projets.html" class="nav-option-footer">Projets</a>
+        <a href="apropos.html" class="nav-option-footer">À propos</a>
+        <a href="accueil.html" class="nav-accueil nav-accueil-actif"
+          ><img src="img/maison-footer.png" alt="accueil" class="maison-footer"
+        /></a>
+      </div>
     </div>
-    <button class="btn-apropos">À propos <img src="img/fleche-brune.png" alt="" class="fleche"> </button>
-    <div class="gallerie-photos-apercu"></div>
-  </div>
 
-  <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
-  <div class="footer">
-    <h1 class="merci">Merci</h1>
-    <p class="contact">
-      N'hésitez pas à me contacter pour des projets ou n'importe qu'elles
-      autres raisons.
-    </p>
-    <p class="infos">
-      William Beauvais - wbeauvais19@gmail.com - 514-889-4575
-    </p>
-    <div class="nav-footer">
-      <a href="projets.html" class="nav-option-footer">Projets</a>
-      <a href="apropos.html" class="nav-option-footer">À propos</a>
-      <a href="accueil.html" class="nav-accueil nav-accueil-actif"><img src="img/maison-footer.png" alt="accueil"
-          class="maison-footer"></a>
-    </div>
-  </div>
-
-  <script src="scripts.js"></script>
-</body>
-
+    <script src="scripts.js"></script>
+  </body>
 </html>
