--- a/accueil.html
+++ b/accueil.html
@@ -55,7 +55,7 @@
 
     <!-- La citation donne à mon portfolio un côté artistique -->
     <div class="citation">
-      <p class="citation-texte">L'art montre à la vie ce qu'elle ignore</p>
+      <p class="citation-texte">L'art montre à la vie ce qu'elle ignore.</p>
     </div>
 
     <!-- Cette bannière animé montre les logiciels que je maitrise -->
@@ -116,7 +116,7 @@
         autres raisons.
       </p>
       <p class="infos">
-        William Beauvais - wbeauvais19@gmail.com - 514-889-4575
+        William Beauvais   wbeauvais19@gmail.com   514-889-4575
       </p>
       <div class="nav-footer">
         <a href="projets.html" class="nav-option-footer">Projets</a>
