--- a/kaneki.html
+++ b/kaneki.html
@@ -50,7 +50,7 @@
         autres raisons.
       </p>
       <p class="infos">
-        William Beauvais - wbeauvais19@gmail.com - 514-889-4575
+        William Beauvais   wbeauvais19@gmail.com   514-889-4575
       </p>
       <div class="nav-footer">
         <a href="projets.html" class="nav-option-footer">Projets</a>
