fichier json fini

--- a/nature.html
+++ b/nature.html
@@ -30,7 +30,7 @@
 
       <div class="desc-img">
         <img
-          src="img/delusion.jpg"
+          src="img/nature.png"
           alt="Projet Nature Morte"
           class="img-projet"
         />
