--- a/save.html
+++ b/save.html
@@ -1,70 +1,65 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio William Beauvais</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/knq4tjk.css" />
-  </head>
 
-  <body>
-    <!-- Le header qui est sur toutes les pages -->
-    <div class="header">
-      <a class="nom" href="accueil.html">William Beauvais</a>
-      <!-- La naviguation qui est dans le header et le footer -->
-      <div class="nav-header">
-        <a href="projets.html" class="nav-option-header">Projets</a>
-        <a href="apropos.html" class="nav-option-header">À propos</a>
-        <a href="accueil.html" class="nav-accueil">
-          <img
-            src="img/maison-header.png"
-            alt="accueil"
-            class="maison-header"
-          />
-        </a>
-      </div>
-    </div>
-    <div class="unprojet">
-      <h1 class="titre">Delusion</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio William Beauvais</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/knq4tjk.css" />
+</head>
 
-      <div class="desc-img">
-        <img src="img/delusion.jpg" alt="Projet Delusion" class="img-projet" />
-        <p class="desc-projet">
-          Delusion est une œuvre qui illustre le sentiment de délire, avec un
-          œil en arrière-plan qui nous transperce de ses émotions. L'eau
-          tranquille suggère qu'une personne en plein délire se croit à l'abri
-          de tout problème, tandis que le texte imposant contraste avec cette
-          tranquillité, révélant le délire de la personne.
-        </p>
-      </div>
-      <div class="logiciel-role">
-        <div class="logis">
-          <img src="img/ai.png" alt="Adobe Illustrator" class="logi" />
-          <img src="img/ps.png" alt="Adobe Photoshop" class="logi" />
-        </div>
-        <p class="role">Rôles dans le projet : Tout</p>
-      </div>
+<body>
+  <!-- Le header qui est sur toutes les pages -->
+  <div class="header">
+    <a class="nom" href="accueil.html">William Beauvais</a>
+    <!-- La naviguation qui est dans le header et le footer -->
+    <div class="nav-header">
+      <a href="projets.html" class="nav-option-header">Projets</a>
+      <a href="apropos.html" class="nav-option-header">À propos</a>
+      <a href="accueil.html" class="nav-accueil">
+        <img src="img/maison-header.png" alt="accueil" class="maison-header" />
+      </a>
     </div>
-    <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
-    <div class="footer">
-      <h1 class="merci">Merci</h1>
-      <p class="contact">
-        N'hésitez pas à me contacter pour des projets ou n'importe qu'elles
-        autres raisons.
+  </div>
+  <div class="unprojet">
+    <h1 class="titre">Save them</h1>
+
+    <div class="desc-img">
+      <img src="img/save_them.jpg" alt="Projet Save them" class="img-projet" />
+      <p class="desc-projet">
+        Save Them est un projet d'affiche pour une collection de la marque de vêtements Blurry, créée par Alexis Bolduc
+        et moi-même au début de notre parcours supérieur. L'objectif était de sensibiliser les gens à la préservation de
+        la nature, en intégrant divers éléments menacés dans le design. Le "a" en rouge fait subtilement référence à
+        l'anarchie, tandis que les étoiles symbolisent l'idée que ces éléments sont déjà au paradis.
       </p>
-      <p class="infos">
-        William Beauvais   wbeauvais19@gmail.com   514-889-4575
-      </p>
-      <div class="nav-footer">
-        <a href="projets.html" class="nav-option-footer">Projets</a>
-        <a href="apropos.html" class="nav-option-footer">À propos</a>
-        <a href="accueil.html" class="nav-accueil nav-accueil-actif"
-          ><img src="img/maison-footer.png" alt="accueil" class="maison-footer"
-        /></a>
-      </div>
     </div>
+    <div class="logiciel-role">
+      <div class="logis">
+        <img src="img/ai.png" alt="Adobe Illustrator" class="logi" />
+      </div>
+      <p class="role">Rôles dans le projet : Tout</p>
+    </div>
+  </div>
+  <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
+  <div class="footer">
+    <h1 class="merci">Merci</h1>
+    <p class="contact">
+      N'hésitez pas à me contacter pour des projets ou n'importe qu'elles
+      autres raisons.
+    </p>
+    <p class="infos">
+      William Beauvais wbeauvais19@gmail.com 514-889-4575
+    </p>
+    <div class="nav-footer">
+      <a href="projets.html" class="nav-option-footer">Projets</a>
+      <a href="apropos.html" class="nav-option-footer">À propos</a>
+      <a href="accueil.html" class="nav-accueil nav-accueil-actif"><img src="img/maison-footer.png" alt="accueil"
+          class="maison-footer" /></a>
+    </div>
+  </div>
 
-    <script src="scripts.js"></script>
-  </body>
+  <script src="scripts.js"></script>
+</body>
+
 </html>
