fetch et filtres dynamique + FINI YOUPI

--- a/1000.html
+++ b/1000.html
@@ -29,7 +29,7 @@
       <h1 class="titre">1000°</h1>
 
       <div class="desc-img">
-        <img src="img/10002.png" alt="Projet 1000°" class="img-projet" />
+        <a href="https://www.youtube.com/watch?v=E-6wlqbwnNw" class="video mille"></a>
         <p class="desc-projet">
           1000° est un projet vidéo qui met en lumière un personnage qui brûle
           de l'intérieur. La cigarette en est une allusion. Les émotions du
