--- a/derive.html
+++ b/derive.html
@@ -45,6 +45,20 @@
         <p class="role">Rôles dans le projet : Images 2, 5, 6, 8, 9 et 10</p>
       </div>
       <p class="collab">En collaboration avec Alexis Bolduc</p>
+      <div class="gallerie-derive">
+        <img src="img/1.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/2.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/3.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/4.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/5.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/6.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/7.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/8.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/9.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/10.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/11.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/12.jpg" class="img-derive" alt="image du projet À la dérive">
+      </div>
     </div>
     <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
     <div class="footer">
