--- a/future.html
+++ b/future.html
@@ -48,6 +48,12 @@
         </div>
         <p class="role">Rôles dans le projet : Tout</p>
       </div>
+      <div class="gallerie-derive">
+        <img src="img/skate_plage.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/skate_army.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/skate_lune.jpg" class="img-derive" alt="image du projet À la dérive">
+        <img src="img/skate_fleur.jpg" class="img-derive" alt="image du projet À la dérive">
+      </div>
     </div>
     <!-- Le footer ouvre la porte à ce que les gens me contact et permet la navigation -->
     <div class="footer">
