--- a/nature.html
+++ b/nature.html
@@ -29,11 +29,7 @@
       <h1 class="titre">Nature Morte</h1>
 
       <div class="desc-img">
-        <img
-          src="img/nature.png"
-          alt="Projet Nature Morte"
-          class="img-projet"
-        />
+        <a href="https://www.youtube.com/watch?v=CmwKzHbb00s" class="video nature"></a>
         <p class="desc-projet">
           Nature Morte est un projet qui met en valeur la nature à son apogée,
           avant que l'humanité ne la gâche et ne détruise la beauté du monde. Ce
