--- a/1000.html
+++ b/1000.html
@@ -11,12 +11,12 @@
   <body>
     <!-- Le header qui est sur toutes les pages -->
     <div class="header">
-      <a class="nom" href="accueil.html">William Beauvais</a>
+      <a class="nom" href="index.html">William Beauvais</a>
       <!-- La naviguation qui est dans le header et le footer -->
       <div class="nav-header">
         <a href="projets.html" class="nav-option-header">Projets</a>
         <a href="apropos.html" class="nav-option-header">À propos</a>
-        <a href="accueil.html" class="nav-accueil">
+        <a href="index.html" class="nav-accueil">
           <img
             src="img/maison-header.png"
             alt="accueil"
@@ -62,7 +62,7 @@
       <div class="nav-footer">
         <a href="projets.html" class="nav-option-footer">Projets</a>
         <a href="apropos.html" class="nav-option-footer">À propos</a>
-        <a href="accueil.html" class="nav-accueil nav-accueil-actif"
+        <a href="index.html" class="nav-accueil nav-accueil-actif"
           ><img src="img/maison-footer.png" alt="accueil" class="maison-footer"
         /></a>
       </div>
