--- a/apropos.html
+++ b/apropos.html
@@ -11,12 +11,12 @@
   <body>
     <!-- Le header qui est sur toutes les pages -->
     <div class="header">
-      <a class="nom" href="accueil.html">William Beauvais</a>
+      <a class="nom" href="index.html">William Beauvais</a>
       <!-- La naviguation qui est dans le header et le footer -->
       <div class="nav-header">
         <a href="projets.html" class="nav-option-header">Projets</a>
         <a href="apropos.html" class="nav-option-header">À propos</a>
-        <a href="accueil.html" class="nav-accueil">
+        <a href="index.html" class="nav-accueil">
           <img
             src="img/maison-header.png"
             alt="accueil"
@@ -65,7 +65,7 @@
       <div class="nav-footer">
         <a href="projets.html" class="nav-option nav-option-actif">Projets</a>
         <a href="apropos.html" class="nav-option">À propos</a>
-        <a href="accueil.html" class="nav-accueil"></a>
+        <a href="index.html" class="nav-accueil"></a>
       </div>
     </div>
 
